# open_manipulator_friends

./: README.md
open_manipulator_6dof_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_6dof_controller/include/open_manipulator_6dof_controller/: open_manipulator_6dof_controller.h
open_manipulator_6dof_controller/launch/: open_manipulator_6dof_controller.launch  open_manipulator_6dof_moveit.launch
open_manipulator_6dof_controller/scripts/: create_udev_rules
open_manipulator_6dof_controller/src/: open_manipulator_6dof_controller.cpp
open_manipulator_6dof_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_6dof_description/launch/: open_manipulator_6dof_rviz.launch
open_manipulator_6dof_description/meshes/: chain_link1.stl  chain_link3.stl  chain_link4.stl  chain_link7.stl
open_manipulator_6dof_description/rviz/: open_manipulator_6dof.rviz
open_manipulator_6dof_description/urdf/: open_manipulator_6dof.gazebo.xacro  open_manipulator_6dof.urdf.xacro
open_manipulator_6dof_libs/: CMakeLists.txt  package.xml
open_manipulator_6dof_libs/include/open_manipulator_6dof_libs/: CustomTrajectory.h  Kinematics.h  OpenManipulator.h  custom_trajectory.h  dynamixel.h  kinematics.h  open_manipulator.h
open_manipulator_6dof_libs/src/: CustomTrajectory.cpp  Dynamixel.cpp  Kinematics.cpp  OpenManipulator.cpp  custom_trajectory.cpp  dynamixel.cpp  kinematics.cpp  open_manipulator.cpp
open_manipulator_6dof_moveit/: .setup_assistant  CMakeLists.txt  package.xml
open_manipulator_6dof_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  open_manipulator_6dof.srdf  ros_controllers.yaml
open_manipulator_6dof_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
open_manipulator_6dof_teleop/: CMakeLists.txt  package.xml
open_manipulator_6dof_teleop/include/open_manipulator_6dof_teleop/: open_manipulator_6dof_teleop_joystick.h  open_manipulator_6dof_teleop_keyboard.h
open_manipulator_6dof_teleop/launch/: open_manipulator_6dof_teleop_joystick.launch  open_manipulator_6dof_teleop_keyboard.launch
open_manipulator_6dof_teleop/src/: open_manipulator_6dof_teleop_joystick.cpp  open_manipulator_6dof_teleop_keyboard.cpp
open_manipulator_friends/: CHANGELOG.rst  CMakeLists.txt  package.xml
