<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_6dof_teleop</name>
  <version>1.0.0</version>
  <description>
    Provides teleoperation using keyboard for OpenManipulator 6DOF.
  </description>
  <license>Apache 2.0</license>
  <author email="zang09@naver.com">Hae-bum Jung</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_friends</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>open_manipulator_msgs</depend>
</package>
